all controllers made as entity framework type

--- a/VotingAPI/Web.config
+++ b/VotingAPI/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -75,6 +75,9 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=VotingAPI.Model1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model1" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=VotingAPI.Model1;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
+      providerName="System.Data.SqlClient" />
+    <add name="VotingAPIContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=VotingAPIContext-20160327134635; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|VotingAPIContext-20160327134635.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
